# Fleet-Managment-System

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh
.github/workflows/: ci.yml
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  entrypoint.prod.sh  pyproject.toml
backend/account/: admin.py  authentication.py  models.py  serializers.py  test_session.py  tests.py  urls.py  views.py
backend/account/migrations/: 0001_initial.py  0002_user_preferences.py  0003_add_user_color.py
backend/account/tests/: helpers.py  test_auth.py  test_session.py  test_user.py
backend/config/: asgi.py  cache_utils.py  filters.py  settings.py  storage_utils.py  test_runner.py  test_settings.py  urls.py
backend/driver/: models.py  serializers.py  tests.py  urls.py  views.py
backend/driver/management/commands/: create_driver_with_vehicle.py
backend/driver/migrations/: 0001_initial.py  0002_add_telegram_id_to_driver.py  0002_drivervehicledeal.py
backend/driver/tests/: helpers.py  test_api.py  test_model.py  test_serializer.py
backend/expense/: admin.py  constants.py  filters.py  models.py  serializers.py  test_validation.py  test_vehicle_expenses.py  tests.py  urls.py  views.py
backend/expense/management/commands/: seed_expense_categories.py
backend/expense/migrations/: 0001_initial.py  0002_default_categories.py  0002_seed_default_categories.py  0003_alter_expense_expense_date.py  0003_simplify_expenses.py  0004_deactivate_insurance.py  0004_reorder_category_priorities.py  0005_inspection.py  0005_invoice_expense_invoice_delete_expenseinvoice.py  0006_add_company_client_amounts.py  0006_rename_expense_exp_vehicle_idx_expense_exp_vehicle_9bc038_idx_and_more.py  0007_fuel_remove_liters_req_and_fuel_types_json.py  0007_remove_expense_description.py  0008_expense_payment_payer_parts_detail.py  0008_remove_amount_use_company_client.py  0009_inspectionexpensedetail_linked_inspection_and_more.py  0009_invoice_file_optional.py  0010_accessories_documents_categories.py  0010_restore_amount_field.py  0011_invoice_upload_by_category.py  0011_populate_amount_from_company_client.py  0012_alter_partsexpensedetail_supplier_type.py  0013_inspectionexpensedetail_registration_certificate.py  0014_add_edited_by.py  0015_populate_edited_by_from_created_by.py  0016_expense_exclude_from_cost.py
backend/expense/tests/: helpers.py  test_api.py  test_cost_splitting.py  test_fuel_types.py  test_invoice.py  test_quick_bulk.py  test_validation.py  test_vehicle_expenses.py
backend/fleet_management/: apps.py  constants.py  filters.py  models.py  serializers.py  services.py  tests.py  translation.py  urls.py  views.py
backend/fleet_management/management/commands/: assign_regulation.py  create_vehicle_reg_basic_schema.py  db_dump.py  db_load.py  drop_reg_schema.py  show_regulation_plan.py
backend/fleet_management/migrations/: 0001_initial.py  0002_fleetvehicleregulationitem_and_more.py  0002_seed_defaults.py  0003_equipmentdefaultitem_created_by_and_more.py  0003_fleetvehicleregulationschema_unique_default_schema.py  0004_add_title_translations_to_regulation.py  0004_fleetservice_address.py  0005_remove_tech_inspection_item.py  0005_seed_default_equipment_items.py  0006_seed_default_regulation_schema.py  0006_update_regulation_intervals.py  0007_alter_fleetvehicleregulationschema_title.py  0007_entry_vehicle_overrides.py  0008_add_title_en.py  0009_entry_next_due_km_override.py  0010_regulation_mile_fields.py
backend/fleet_management/tests/: helpers.py  test_api.py  test_calendar_inspections.py  test_model.py  test_serializers.py  test_services.py
backend/notification/: admin.py  constants.py  consumers.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/notification/migrations/: 0001_initial.py
backend/notification/tests/: helpers.py  test_api.py  test_services.py
backend/vehicle/: admin.py  apps.py  constants.py  filters.py  models.py  serializers.py  services.py  signals.py  test_archive.py  test_inspections.py  test_mileage.py  test_owner_history.py  test_photos.py  test_reorder.py  test_signals.py  tests.py  urls.py  views.py
backend/vehicle/management/commands/: drop_all_vehicles.py  import_trello_vehicles.py  reset_vehicle_regulation.py
backend/vehicle/migrations/: 0001_initial.py  0002_alter_vehicle_status_delete_vehiclestatus.py  0002_technicalinspection_created_by_vehicle_created_by_and_more.py  0003_remove_vehicleownerhistory_created_by_and_more.py  0003_vehicle_initial_km.py  0004_update_vehicle_status_choices.py  0004_vehicleownerhistory_vehiclephoto.py  0005_vehicle_color.py  0005_vehicle_photo_structured_upload_path.py  0006_fuel_type_optional.py  0006_technicalinspection.py  0007_car_number_optional_temporary_plate.py  0007_vehicle_archive_fields.py  0008_mileagelog.py  0008_vehicle_idx_status_position.py  0009_add_updated_at_indexes.py  0009_vehicle_fuel_type.py  0010_technicalinspection_next_inspection_date.py  0010_vehicle_year_nullable.py  0011_add_company_client_amounts.py  0011_backfill_next_inspection_date.py  0012_vehicle_distance_unit.py  0013_vehiclephoto_is_cover.py  0014_alter_vehicle_fuel_type.py  0015_vehiclestatushistory.py  0016_alter_vehicle_fuel_type.py
backend/vehicle/tests/: helpers.py  test_api.py  test_archive.py  test_inspections.py  test_mileage.py  test_model.py  test_owner_history.py  test_owner_services.py  test_photos.py  test_reorder.py  test_status_history.py
bot/: Dockerfile  app.py  constants.py  keyboards.py  pdf_regulation.py  requirements.txt  states.py
bot/functions/: __init__.py
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  I18N_MIGRATION_GUIDE.md  I18N_STATUS.md  QUICK_I18N_START.md  VEHICLE_KANBAN_SETUP.md  i18n.config.ts  i18n.ts  middleware.ts  navigation.ts  next.config.ts  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx
nginx/: nginx.conf  nginx.dev.conf
(+95 files in other folders)
