[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksym Potapchuk",email = "maksym.potapchuk.hp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "django-filter (>=25.0.0,<26.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "Pillow (>=11.0.0,<12.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88

# ── Formatter ─────────────────────────────────────────────────────────────────
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# ── Linter ────────────────────────────────────────────────────────────────────
[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade — modernise syntax to 3.12+
    "B",    # flake8-bugbear — real bug patterns
    "DJ",   # flake8-django — Django/DRF specific
]
ignore = [
    "E501",   # line too long — the formatter handles this
    "B008",   # function call in default arg — needed for DRF (permission_classes=[...])
    "DJ001",  # null=True on string fields — intentional in several models
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["ALL"]
"**/settings*.py"     = ["E501", "F401", "F403", "F405"]
"**/test_settings.py" = ["E501", "F401", "F403", "F405"]

# ── isort ─────────────────────────────────────────────────────────────────────
[tool.ruff.lint.isort]
known-first-party  = ["account", "driver", "vehicle", "fleet_management", "expense", "config"]
known-third-party  = ["django", "rest_framework", "corsheaders", "django_filters", "jwt"]
force-sort-within-sections = true
combine-as-imports = true

# ── Naming ────────────────────────────────────────────────────────────────────
[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "classmethod",
    "django.utils.decorators.classonlymethod",
]
